syntax = "proto3";

option go_package = "/";

message Order {
  int32 id = 1;
  string name = 2;
  string address = 3;
}

service OrderManagementService {
  rpc CreateOrder(Order) returns (Order) {}
  rpc UpdateOrder(Order) returns (Order) {}
  rpc ReadOrder(Order) returns (Order) {}
  rpc DeleteOrder(Order) returns (Order) {}
}
